# cpp

hw_01/include/: bmp.h
hw_01/src/: bmp.c  main.c
hw_02/: CMakeLists.txt
hw_02/include/: Board.h  BoardTest.h  GameController.h  NcursesBoardView.h  StdioBoardView.h  Test.h  View.h
hw_02/src/: Board.cpp  GameController.cpp  NcursesBoardView.cpp  StdioBoardView.cpp  main.cpp
hw_02/test/: BoardTest.cpp  Test.cpp  test_hw_02.cpp
hw_03/: CMakeLists.txt
hw_03/include/: CLI.h  Huffman.h  HuffmanArchiver.h  Streams.h
hw_03/src/: CLI.cpp  Huffman.cpp  HuffmanArchiver.cpp  Streams.cpp  main.cpp
hw_03/test/: TestCLI.cpp  TestHuffman.cpp  TestHuffmanArchiver.cpp  TestStreams.cpp  doctest.h
hw_1/: Makefile
hw_1/include/: bmp.h
hw_1/src/: bmp.c  main.c
lab_01/unresolved/: Makefile
lab_02/: Makefile
lab_02/include/: str.h  test_str.h
lab_02/src/: str.c  test.c  test_str.c
lab_03/: Makefile
lab_03/include/: clist.h
lab_03/src/: clist.c  main.c
lab_04/: Makefile
lab_04/include/: mergesort.h
lab_04/src/: main.c  mergesort.c
lab_05/: Makefile
lab_05/include/: clist.h  point_list.h
lab_05/src/: clist.c  main.c  point_list.c
lab_09/include/: matrix.hpp  shared_ptr.hpp
lab_09/src/: main.cpp  matrix.cpp  shared_ptr.cpp
lab_10/: Makefile
lab_10/include/: Circle.h  Figure.h  Rectangle.h  Scheme.h
lab_10/src/: Circle.cpp  Figure.cpp  Rectangle.cpp  Scheme.cpp  main.cpp
lab_11/: Makefile
lab_11/include/: bin_manip.h  employees.h
lab_11/src/: bin_manip.cpp  (+2 more)
lab_12/: CMakeLists.txt
lab_13/: CMakeLists.txt
lab_14/: CMakeLists.txt
(+25 files in other folders)
